# ECM_aging

./: .gitignore  CHANGELOG.md  CLAUDE.md  NOTICE  QUICKSTART.md  README.md  environment-frozen.yml  environment.yml  pyproject.toml  requirements.txt
docs/: 01_setup_guide.md  02_model_overview.md  03_inputs_guide.md  04_outputs_guide.md  05_workflow_examples.md  06_parameter_sourcing.md  07_offline_runbook.md  08_consultation_protocol.md  09_offline_bundle_guide.md  CLAUDE.md  CRITICAL_REVIEW.md  MIGRATION_NOTES.md  PARAMETERS.json  PARAMETER_SOP.md  SPEC_dm_aging.md  SPEC_ic_analysis.md  TODO_ic_analysis.md  error_codes.schema.json  error_codes_registry.json
docs/UPGRADE_LITERATURE/: fractional_order_RC.md  ic_analysis_methodology_review.md
docs/decisions/: 0001-three-document-ssot-fact-layer.md  0002-paper-errata-precedence.md  0003-r5-four-step-protocol.md  0004-r6-error-code-chain.md  0005-r7-dual-spec-cell-type-architecture.md  0006-r8-readme-quickstart-sync.md  0007-x0-reference-convention.md  0008-dual-brentq-x-ne-inversion.md  0009-path-b-algebraic-forward-for-ic-analysis.md  0010-cell-role-categorization.md  0011-rpt-bidirectional-data-contract.md  0012-exp-b4-splits-fallback-warning.md  0013-fig-6c-sum-dms-vs-cap-loss.md  0014-tau-r-dual-candidate-mapping.md  0015-relaxation-models-dispatch-pattern.md  0016-r-sei-exit-calendar-fittable-params.md  0017-forward-sim-performance-deferred-v0.8.md  0018-error-code-status-active-and-n3-upgrade-path.md  0019-fit4b-e007-w001-trigger-forward-sim.md  0020-deprecate-old-fit4-error-codes.md  0021-lfp-llionly-ic-analysis.md  0022-lfp-alawa-padhi-yamada.md  README.md  _template.md
docs/legacy/: MIGRATION_NOTES.md
examples/: analysis_template.py  figure7_simulation.py  smoke_test.py
libquiv_aging/: __init__.py  aging_kinetics.py  cell_factory.py  cell_model.py  constants.py  dm_aging_fit.py  fitting.py  ic_analysis.py  lookup_tables.py  panasonic_ncr18650b.py  relaxation_fitting.py
libquiv_aging/data/: Dubarry_2019_Batteries_Capacity_Fig__3a.csv  (+2 more)
material_specs/: lfp_large_format_power.material.json  panasonic_ncr18650b.material.json
param_specs/: lfp_large_format_power__mmeka2025.params.json  panasonic_ncr18650b__mmeka2025.params.json
schemas/: material.schema.v1.json  params_mmeka2025.schema.v1.json
scripts/: build_requirements.sh  check_parameter_consistency.py  fit_dm_aging.py  fit_electrode_balance.py  fit_ic_to_dms.py  fit_rc_transient.py  install_offline.sh  verify_install.sh
tests/: golden_panasonic_snapshot.json  test_basic.py  test_cell_factory.py  test_dm_aging.py  test_error_codes_registry.py  test_fit_electrode_balance.py  test_fit_rc_transient.py  test_fitting.py  test_ic_analysis.py  test_panasonic_equivalence.py  test_relaxation_fitting.py  test_schemas.py
(+2 files in other folders)
